create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -472,12 +472,12 @@ h6,
   color: #f4861f!important;
 }
 #slider-1 P {
-  text-align: center;
+  text-align: left;
   color: #ffffff;
 }
 #slider-1 H2 {
   color: #f4861f;
-  text-align: center;
+  text-align: left;
 }
 #slider-1 SPAN {
   color: #000000;
