create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -500,6 +500,9 @@ h6,
   color: #232323;
   font-size: 36px;
 }
+#msg-box5-1c P {
+  color: #ffffff;
+}
 #features6-n H4 {
   text-align: center;
 }
