--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -503,6 +503,20 @@ h6,
 #features6-n H4 {
   text-align: center;
 }
+#testimonials3-1y .mbr-section-title {
+  color: #000000;
+}
+#testimonials3-1y .mbr-author-name {
+  color: #ccc;
+}
+#testimonials3-1y .card-block P {
+  text-align: left;
+  color: #000000;
+  font-size: 14px;
+}
+#testimonials3-1y .card-footer > div {
+  color: #000000;
+}
 #header3-14 .mbr-section-title,
 #header3-14 .mbr-section-subtitle {
   text-align: center;
