--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -569,6 +569,9 @@ h6,
 #contacts3-t P {
   text-align: left;
 }
+#contacts3-t .list-group-text {
+  color: #000000;
+}
 #footer1-v P {
   color: #000000;
 }
