create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -505,11 +505,11 @@ h6,
 }
 #header3-2a .mbr-section-title {
   color: #f4861f;
-  text-align: left;
+  text-align: center;
 }
 #header3-2a .mbr-section-subtitle {
   color: #000000;
-  text-align: left;
+  text-align: center;
 }
 #header3-20 .mbr-section-title,
 #header3-20 .mbr-section-subtitle {
