--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -422,7 +422,7 @@ h6,
   text-align: center;
 }
 #header3-k .mbr-section-title {
-  color: #ffffff;
+  color: #f4861f;
 }
 #header3-k .mbr-section-subtitle {
   color: #000000;
