--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -425,7 +425,7 @@ h6,
   color: #f4861f;
 }
 #header3-k .mbr-section-subtitle {
-  color: #000000;
+  color: #ffffff;
 }
 #menu-0 .hide-buttons .nav-btn {
   display: none !important;
