create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -675,11 +675,10 @@ section.form .container {
 #contacts3-t SPAN {
   color: #ffffff;
 }
-#social-buttons2-o .mbr-section-title,
-#social-buttons2-o .btn-social {
+#social-buttons2-2k .mbr-section-title,
+#social-buttons2-2k .btn-social {
   color: #232323;
 }
-#social-buttons2-o .mbr-section-title {
+#social-buttons2-2k .mbr-section-title {
   color: #f4861f;
-  text-align: center;
 }
