--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -678,3 +678,84 @@ section.form .container {
 #contacts3-t SPAN {
   color: #ffffff;
 }
+#menu-2o .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-2o .navbar-caption {
+  color: #ffffff;
+}
+#menu-2o .navbar-toggler {
+  color: #f4861f;
+}
+#menu-2o .close-icon::before,
+#menu-2o .close-icon::after {
+  background-color: #f4861f;
+}
+#menu-2o .link,
+#menu-2o .dropdown-item {
+  color: #f4861f;
+}
+#menu-2o .link {
+  font-size: 0.75rem;
+}
+#menu-2o .dropdown-item,
+#menu-2o .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-2o .link:hover,
+#menu-2o .dropdown-item:hover,
+#menu-2o .link:focus,
+#menu-2o .dropdown-item:focus {
+  color: #000000;
+}
+#menu-2o .link[aria-expanded="true"],
+#menu-2o .dropdown-menu {
+  background: #e6e6e6;
+}
+#menu-2o .nav-dropdown-sm .link:focus,
+#menu-2o .nav-dropdown-sm .link:hover,
+#menu-2o .nav-dropdown-sm .dropdown-item:focus,
+#menu-2o .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#menu-2o .navbar,
+#menu-2o .nav-dropdown-sm,
+#menu-2o .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-2o .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#menu-2o .bg-color.transparent .link {
+  color: #f4861f;
+  transition: none;
+}
+#menu-2o .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-2o .bg-color.transparent.opened .link:hover,
+#menu-2o .bg-color.transparent.opened .link:focus {
+  color: #000000;
+}
+#menu-2o .link[aria-expanded="true"],
+#menu-2o .dropdown-item[aria-expanded="true"] {
+  color: #000000!important;
+}
+#menu-2o A {
+  font-size: 12px;
+}
+#contacts3-2p STRONG {
+  color: #f4861f;
+}
+#contacts3-2p H4 {
+  color: #f4861f;
+  text-align: left;
+}
+#contacts3-2p P {
+  text-align: left;
+  color: #000000;
+}
+#contacts3-2p .list-group-text {
+  color: #000000;
+}
+#contacts3-2p SPAN {
+  color: #ffffff;
+}
